# doom-vector

./: .dockerignore  .gitignore  README.md  requirements.txt
brain/encoder/: __init__.py  navigation.py  structured.py  thumbnail.py
brain/memory/: experience_store.py  trajectory_store.py
brain/policy/: episodic.py  mmr.py  reward.py  trajectory_follow.py
bridge/ruvector_py/: Cargo.toml  README.md  pyproject.toml
bridge/ruvector_py/src/: lib.rs  world_model.rs
deploy/: Dockerfile.arm64  bench_seed.py  build_pyo3_arm64.sh  measure_rss.py  pi_setup.md  setup_binfmt.sh
docs/: ruvector-by-example.md
docs/plans/: doom-vector-full-level-northstar.md  doom-vector-self-learning-agent.md  doom-vector-skills-and-features.md
envs/: basic.py
experiments/: record_demo.py  replay.py  spike_memory_loop.py  spike_random_basic.py  train.py  train_path.py  train_world_model.py
tests/: conftest.py  test_aim_encoder.py  test_aim_learning.py  test_backend_parity.py  test_dodge_encoder.py  test_dodge_learning.py  test_dodge_policy.py  test_experience_store.py  test_mmr.py  test_reward_shaping.py
