[package]
name = "ruvector_py"
version = "0.1.0"
edition = "2021"
description = "PyO3 binding exposing ruvector-core as a native Python module"

[lib]
name = "ruvector_py"
# cdylib -> a Python extension module (.so). No Node/runtime needed.
crate-type = ["cdylib"]

[dependencies]
# abi3-py39: one wheel works on Python 3.9+ (matches ViZDoom's aarch64 wheels
# and whatever Python the Pi OS ships). Bump pyo3 if your Rust/Python combo
# needs it.
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
# Drop the default `simd` feature: its `simsimd` C kernels SEGFAULT on 32-bit ARM
# (armv7). The pure-Rust scalar distance fallback is used instead — negligible
# cost for our low-dim vectors, and it works on every arch. Also drop
# `api-embeddings` (pulls reqwest/ring — unused, and 32-bit-risky).
ruvector-core = { version = "2.2.0", default-features = false, features = ["storage", "hnsw", "parallel"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
