[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ruvector_py"
version = "0.1.0"
description = "Native Python binding to ruvector-core for doom-vector"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Rust"]

[tool.maturin]
module-name = "ruvector_py"
